--- a/cluster/pom.xml
+++ b/cluster/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>mastfrog-parent</artifactId>
         <groupId>com.mastfrog</groupId>
-        <version>2.5.0</version>
+        <version>2.5.1-dev</version>
         <relativePath/>
     </parent>
     <artifactId>cluster</artifactId>
