--- a/giulius-mongodb/pom.xml
+++ b/giulius-mongodb/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.5.1-dev</version>
+        <version>2.6.0</version>
     </parent>
     <artifactId>giulius-mongodb</artifactId>
     <url>https://github.com/timboudreau/giulius</url>
