--- a/giulius-settings/pom.xml
+++ b/giulius-settings/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>mastfrog-parent</artifactId>
         <groupId>com.mastfrog</groupId>
-        <version>2.5.1-dev</version>
+        <version>2.6.0</version>
         <relativePath/>
     </parent>
     <artifactId>giulius-settings</artifactId>
