--- a/giulius-postgres-async/pom.xml
+++ b/giulius-postgres-async/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.mastfrog</groupId>
-        <artifactId>giulius-parent</artifactId>
-        <version>2.6.9</version>
+        <artifactId>mastfrog-parent</artifactId>
+        <version>2.6.10</version>
     </parent>
     <properties>
         <enforcer.skip>true</enforcer.skip>
