--- a/giulius-mongodb-async-init/pom.xml
+++ b/giulius-mongodb-async-init/pom.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+<project
+     xmlns="http://maven.apache.org/POM/4.0.0"
+     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.1</version>
+        <version>2.8.2</version>
         <relativePath/>
     </parent>
+
     <artifactId>giulius-mongodb-async-init</artifactId>
+
     <url>https://github.com/timboudreau/giulius</url>
+
     <scm>
         <url>https://github.com/timboudreau/giulius.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
@@ -19,6 +27,7 @@
         <system>Github</system>
         <url>https://github.com/timboudreau/giulius/issues</url>
     </issueManagement>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -26,11 +35,14 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
     </organization>
+
     <dependencies>
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>giulius-mongodb-async</artifactId>
@@ -78,33 +90,38 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
+
     <build>
+
         <!-- to enable console logging in real time -->
-        <!--
-        <plugins>
+<!--
+            <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20.1</version>
-                <configuration>
-                    <parallelMavenExecution>false</parallelMavenExecution>
-                    <reuseForks>false</reuseForks>
-                    <parallel>none</parallel>
-                    <threadCount>0</threadCount>
-                    <forkMode>never</forkMode>
-                    <forkCount>0</forkCount>
-                    <trimStackTrace>false</trimStackTrace>
-                    <useFile>false</useFile>
-                    <systemPropertyVariables>
-                        <migration.log>true</migration.log>
-                        <unit.test>true</unit.test>
-                        <acteur.debug>false</acteur.debug>
-                        <forkNumber>${surefire.forkNumber}</forkNumber>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin>            
-        </plugins>
-                -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.20.1</version>
+            <configuration>
+            <parallelMavenExecution>false</parallelMavenExecution>
+            <reuseForks>false</reuseForks>
+            <parallel>none</parallel>
+            <threadCount>0</threadCount>
+            <forkMode>never</forkMode>
+            <forkCount>0</forkCount>
+            <trimStackTrace>false</trimStackTrace>
+            <useFile>false</useFile>
+            <systemPropertyVariables>
+            <migration.log>true</migration.log>
+            <unit.test>true</unit.test>
+            <acteur.debug>false</acteur.debug>
+            <forkNumber>${surefire.forkNumber}</forkNumber>
+            </systemPropertyVariables>
+            </configuration>
+            </plugin>
+            </plugins>
+        -->
     </build>
+
 </project>
+
