--- a/giulius-mongodb-async/pom.xml
+++ b/giulius-mongodb-async/pom.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+<project
+     xmlns="http://maven.apache.org/POM/4.0.0"
+     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.1</version>
+        <version>2.8.2</version>
         <relativePath/>
     </parent>
+
     <artifactId>giulius-mongodb-async</artifactId>
+
     <url>https://github.com/timboudreau/giulius</url>
+
     <dependencies>
+
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-async</artifactId>
@@ -47,10 +56,14 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
+
     <build>
         <plugins>
+
             <plugin>
+
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <executions>
@@ -60,39 +73,45 @@
                         </goals>
                     </execution>
                 </executions>
+
             </plugin>
-            <!--
-            <plugin>
+
+<!--
+                <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20.1</version>
                 <configuration>
-                    <parallel/>
-                    <parallelMavenExecution>false</parallelMavenExecution>
-                    <perCoreThreadCount>1</perCoreThreadCount>
-                    <threadCount>1</threadCount>
-                    <reuseForks>false</reuseForks>
-                    <systemPropertyVariables>
-                        <acteur.debug>true</acteur.debug>
-                    </systemPropertyVariables>
+                <parallel/>
+                <parallelMavenExecution>false</parallelMavenExecution>
+                <perCoreThreadCount>1</perCoreThreadCount>
+                <threadCount>1</threadCount>
+                <reuseForks>false</reuseForks>
+                <systemPropertyVariables>
+                <acteur.debug>true</acteur.debug>
+                </systemPropertyVariables>
                 </configuration>
-            </plugin>
+                </plugin>
             -->
         </plugins>
+
     </build>
     <issueManagement>
         <system>Github</system>
         <url>https://github.com/timboudreau/giulius/issues</url>
     </issueManagement>
+
     <scm>
         <url>https://github.com/timboudreau/giulius.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius.git</developerConnection>
     </scm>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
     </organization>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -100,6 +119,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <name>Tim Boudreau</name>
@@ -107,4 +127,6 @@
             <url>https://timboudreau.com</url>
         </developer>
     </developers>
+
 </project>
+
