--- a/giulius/pom.xml
+++ b/giulius/pom.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+<project
+     xmlns="http://maven.apache.org/POM/4.0.0"
+     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.1</version>
+        <version>2.8.2</version>
         <relativePath/>
     </parent>
+
     <artifactId>giulius</artifactId>
+
     <url>https://github.com/timboudreau/giulius</url>
     <name>Giulius</name>
+
     <dependencies>
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>giulius-settings</artifactId>
@@ -46,20 +55,24 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
     <issueManagement>
         <system>Github</system>
         <url>https://github.com/timboudreau/giulius/issues</url>
     </issueManagement>
+
     <scm>
         <url>https://github.com/timboudreau/giulius.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius.git</developerConnection>
     </scm>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
     </organization>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -67,6 +80,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <name>Tim Boudreau</name>
@@ -74,4 +88,6 @@
             <url>https://timboudreau.com</url>
         </developer>
     </developers>
+
 </project>
+
