--- a/injection-reflection-indexer/pom.xml
+++ b/injection-reflection-indexer/pom.xml
@@ -1,39 +1,51 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+<project
+     xmlns="http://maven.apache.org/POM/4.0.0"
+     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.1</version>
+        <version>2.8.2</version>
         <relativePath/>
     </parent>
+
     <artifactId>injection-reflection-indexer</artifactId>
+
     <url>https://github.com/timboudreau/giulius</url>
+
     <build>
         <plugins>
             <plugin>
+
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
                     <fork>true</fork>
                 </configuration>
                 <executions>
-                    <!--                    <execution>
-                        <id>process-annotations</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <configuration>
-                            <compilerArgs>
-                                <arg>-proc:only</arg>
-                                <arg>-processor</arg>
-                                <arg>com.mastfrog.util.service.ServiceProviderAnnotationProcessor</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </execution>-->
+
+                    <!-- <execution>
+                         <id>process-annotations</id>
+                         <phase>generate-sources</phase>
+                         <goals>
+                         <goal>compile</goal>
+                         </goals>
+                         <configuration>
+                         <compilerArgs>
+                         <arg>-proc:only</arg>
+                         <arg>-processor</arg>
+                         <arg>com.mastfrog.util.service.ServiceProviderAnnotationProcessor</arg>
+                         </compilerArgs>
+                         </configuration>
+                         </execution> -->
+
                     <execution>
+
                         <id>process-test-annotations</id>
                         <phase>generate-test-sources</phase>
                         <goals>
@@ -46,7 +58,9 @@
                                 <arg>com.mastfrog.graal.injection.processor.GraalInjectionProcessor</arg>
                             </compilerArgs>
                         </configuration>
+
                     </execution>
+
                     <execution>
                         <id>default-compile</id>
                         <phase>compile</phase>
@@ -55,7 +69,9 @@
                         </goals>
                         <configuration>
                             <compilerArgs>
-                                <!--<arg>-proc:none</arg>-->
+
+                                <!-- <arg>-proc:none</arg> -->
+
                             </compilerArgs>
                         </configuration>
                     </execution>
@@ -67,7 +83,9 @@
                         </goals>
                         <configuration>
                             <compilerArgs>
-                                <!--<arg>-proc:none</arg>-->
+
+                                <!-- <arg>-proc:none</arg> -->
+
                             </compilerArgs>
                         </configuration>
                     </execution>
@@ -84,10 +102,14 @@
                         <version>${mastfrog.version}</version>
                     </dependency>
                 </dependencies>
+
             </plugin>
         </plugins>
+
     </build>
+
     <dependencies>
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>annotation-processors</artifactId>
@@ -128,20 +150,24 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
     <issueManagement>
         <system>Github</system>
         <url>https://github.com/timboudreau/giulius/issues</url>
     </issueManagement>
+
     <scm>
         <url>https://github.com/timboudreau/giulius.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius.git</developerConnection>
     </scm>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
     </organization>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -149,6 +175,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <name>Tim Boudreau</name>
@@ -156,4 +183,6 @@
             <url>https://timboudreau.com</url>
         </developer>
     </developers>
+
 </project>
+
