--- a/maven-merge-configuration/pom.xml
+++ b/maven-merge-configuration/pom.xml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+<project
+     xmlns="http://maven.apache.org/POM/4.0.0"
+     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.1</version>
+        <version>2.8.2</version>
         <relativePath/>
     </parent>
+
     <artifactId>maven-merge-configuration</artifactId>
+
     <url>https://github.com/timboudreau/giulius</url>
-    <description>Maven plugin for building fat-jars and assisting in repeatable builds,
-        which can intelligently merge and scrub various kinds of META-INF files.</description>
+    <description>
+        Maven plugin for building fat-jars and assisting in repeatable builds,
+        which can intelligently merge and scrub various kinds of META-INF files.
+    </description>
     <name>maven-merge-configuration</name>
     <packaging>maven-plugin</packaging>
+
     <properties>
         <enforcer.skip>true</enforcer.skip>
     </properties>
+
     <dependencies>
+
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
@@ -58,15 +70,21 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+
     </dependencies>
+
     <build>
         <plugins>
+
             <plugin>
+
                 <artifactId>maven-plugin-plugin</artifactId>
                 <version>3.6.0</version>
                 <configuration>
                     <goalPrefix>merge-configuration</goalPrefix>
+
                     <!-- Utterly non-obvious: http://bit.ly/WwuNiJ -->
+
                     <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
                 </configuration>
                 <executions>
@@ -78,31 +96,40 @@
                         </goals>
                     </execution>
                 </executions>
-                <!--                <executions>
-                    <execution>
-                        <id>generated-helpmojo</id>
-                        <goals>
-                            <goal>helpmojo</goal>
-                        </goals>
-                    </execution>
-                </executions>-->
+
+                <!-- <executions>
+                     <execution>
+                     <id>generated-helpmojo</id>
+                     <goals>
+                     <goal>helpmojo</goal>
+                     </goals>
+                     </execution>
+                     </executions> -->
+
             </plugin>
+
         </plugins>
+
     </build>
+
     <!-- repos so I can be built independently -->
+
     <issueManagement>
         <system>Github</system>
         <url>https://github.com/timboudreau/giulius/issues</url>
     </issueManagement>
+
     <scm>
         <url>https://github.com/timboudreau/giulius.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius.git</developerConnection>
     </scm>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
     </organization>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -110,6 +137,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <name>Tim Boudreau</name>
@@ -117,4 +145,6 @@
             <url>https://timboudreau.com</url>
         </developer>
     </developers>
+
 </project>
+
