--- a/maven-merge-configuration/src/testprojects/a/pom.xml
+++ b/maven-merge-configuration/src/testprojects/a/pom.xml
@@ -1,23 +1,34 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+<project
+     xmlns="http://maven.apache.org/POM/4.0.0"
+     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <parent>
         <artifactId>guicy-parent</artifactId>
         <groupId>com.mastfrog</groupId>
-        <version>2.8.1</version>
+        <version>2.8.2</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
     <artifactId>testproject-a</artifactId>
+
     <url>https://github.com/timboudreau/giulius</url>
     <name>Test Project A</name>
+
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>guicy</artifactId>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
+
             <plugin>
+
                 <groupId>com.mastfrog</groupId>
                 <artifactId>maven-merge-configuration</artifactId>
                 <version>${project.version}</version>
@@ -31,22 +42,28 @@
                         </goals>
                     </execution>
                 </executions>
+
             </plugin>
+
         </plugins>
+
     </build>
     <issueManagement>
         <system>Github</system>
         <url>https://github.com/timboudreau/giulius/issues</url>
     </issueManagement>
+
     <scm>
         <url>https://github.com/timboudreau/giulius.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius.git</developerConnection>
     </scm>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
     </organization>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -54,6 +71,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <name>Tim Boudreau</name>
@@ -61,4 +79,6 @@
             <url>https://timboudreau.com</url>
         </developer>
     </developers>
+
 </project>
+
