--- a/pom.xml
+++ b/pom.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+<project
+     xmlns="http://maven.apache.org/POM/4.0.0"
+     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
     <artifactId>giulius-parent</artifactId>
+
     <url>https://github.com/timboudreau/giulius</url>
+
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.1</version>
+        <version>2.8.2</version>
         <relativePath/>
     </parent>
+
     <name>Giulius Parent</name>
     <description>Guice + Configuration tools</description>
     <packaging>pom</packaging>
     <modules>
+
         <module>giulius</module>
         <module>giulius-settings</module>
         <module>maven-merge-configuration</module>
         <module>signalreload</module>
         <module>giulius-jdbc</module>
         <module>giulius-mongodb</module>
-        <!--        <module>giulius-mongojack</module> -->
+
+        <!-- <module>giulius-mongojack</module> -->
+
         <module>giulius-mongodb-async</module>
         <module>giulius-threadpool</module>
         <module>giulius-mongodb-async-init</module>
@@ -29,20 +39,24 @@
         <module>giulius-annotation-processors</module>
         <module>giulius-postgres-async</module>
         <module>smart-jar-merge</module>
+
     </modules>
     <issueManagement>
         <system>Github</system>
         <url>https://github.com/timboudreau/giulius/issues</url>
     </issueManagement>
+
     <scm>
         <url>https://github.com/timboudreau/giulius.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius.git</developerConnection>
     </scm>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
     </organization>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -50,6 +64,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <name>Tim Boudreau</name>
@@ -57,4 +72,6 @@
             <url>https://timboudreau.com</url>
         </developer>
     </developers>
+
 </project>
+
