--- a/smart-jar-merge/pom.xml
+++ b/smart-jar-merge/pom.xml
@@ -1,22 +1,31 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+     xmlns="http://maven.apache.org/POM/4.0.0"
+     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.1</version>
+        <version>2.8.2</version>
         <relativePath/>
     </parent>
+
     <artifactId>smart-jar-merge</artifactId>
+
     <url>https://github.com/timboudreau/giulius</url>
-    <description>Jar-marging utilities which knows how to coalesce
+    <description>
+        Jar-marging utilities which knows how to coalesce
         things like META-INF/services files, omit specified Jar entries,
         rewrite generated properties files minus the generated date-comment
         that defeats repeatable builds and similar.  Filters for JARs are
         pluggable via META-INF/services.
     </description>
+
     <dependencies>
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>util-strings</artifactId>
@@ -25,10 +34,13 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>util-fileformat</artifactId>
         </dependency>
+
         <dependency>
+
             <groupId>${project.groupId}</groupId>
             <artifactId>giulius-settings</artifactId>
             <exclusions>
+
                 <!-- Sigh - because this is a test dependency, run-in-ide
                      removes it from the runtime classpath.
                 -->
@@ -37,25 +49,31 @@
                     <artifactId>util-strings</artifactId>
                 </exclusion>
             </exclusions>
+
         </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+
     </dependencies>
     <issueManagement>
         <system>Github</system>
         <url>https://github.com/timboudreau/util/issues</url>
     </issueManagement>
+
     <scm>
         <url>https://github.com/timboudreau/util</url>
         <connection>scm:git:https://github.com/timboudreau/util</connection>
         <developerConnection>git@github.com/timboudreau/util</developerConnection>
     </scm>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
     </organization>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -63,6 +81,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <id>tim</id>
@@ -71,22 +90,29 @@
             <email>tim@timboudreau.com</email>
         </developer>
     </developers>
+
     <build>
-        <!-- 
+
+<!--
             Pending:  Use the maven-antrun plugin to invoke our own
             code against ourselves so we can dogfood.
         -->
         <plugins>
+
             <plugin>
+
                 <groupId>com.mastfrog</groupId>
                 <artifactId>maven-merge-configuration</artifactId>
-                <!-- This needs to boostrap from the previous release or 
+
+                <!-- This needs to boostrap from the previous release or
                      we get a cyclic dependency -->
                 <version>${maven.merge.configuration.previous}</version>
                 <executions>
                     <execution>
-                        <!--<phase>process-resources</phase>-->
-                        <!--<phase>site</phase>-->
+
+                        <!-- <phase>process-resources</phase> -->
+                        <!-- <phase>site</phase> -->
+
                         <phase>package</phase>
                         <id>compile</id>
                         <goals>
@@ -98,7 +124,11 @@
                         </configuration>
                     </execution>
                 </executions>
+
             </plugin>
+
         </plugins>
+
     </build>
+
 </project>
